# Tunnel

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  package-lock.json
.agents/: ONBOARDING.md
.github/workflows/: ci.yml  nightly.yml  release.yml
crates/spike-client/: Cargo.toml
crates/spike-client/src/: main.rs
crates/tunnel-client/: Cargo.toml
crates/tunnel-client/examples/: dummy_origin.rs
crates/tunnel-client/src/: config.rs  conn.rs  http_proxy.rs  logging.rs  main.rs  ws_proxy.rs
crates/tunnel-client/tests/: e2e.sh
crates/tunnel-protocol/: Cargo.toml
crates/tunnel-protocol/src/: codec.rs  frame.rs  lib.rs
crates/tunnel-worker/: .gitignore  Cargo.toml  wrangler.toml
crates/tunnel-worker/migrations/: 0001_init.sql  0002_unique_client_name.sql
crates/tunnel-worker/panel/: app.js  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
crates/tunnel-worker/panel/src/: api.test.ts  api.ts  app.tsx  form.test.ts  form.ts  styles.css  toast.tsx  types.ts
crates/tunnel-worker/panel/src/components/: Activity.tsx  Clients.tsx  ConfirmDialog.tsx  Field.tsx  Login.tsx  Routes.tsx  Toast.tsx
crates/tunnel-worker/src/: admin.rs  auth.rs  lib.rs  routing.rs  session.rs  session_helpers.rs  store.rs  token.rs
crates/tunnel-worker/tests/: live.sh
crates/tunnel-worker/tests/e2e/: connect_and_get.mjs
docs/: architecture.md  configuration.md  deployment.md  development.md  security.md
xtask/: Cargo.toml
xtask/src/: main.rs
