[package]
name = "tunnel-client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "tunnel-client"
path = "src/main.rs"

[dependencies]
tunnel-protocol = { path = "../tunnel-protocol" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
axum = { version = "0.7", features = ["ws"] }
