[package]
name = "tunnel-worker"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.8"
worker-macros = "0.8"
tunnel-protocol = { path = "../tunnel-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
